force-app/main/default/objects/Payment__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <inlineHelpText>Specifies the Routing Transit Number of the check, if payment made through check.</inlineHelpText>
    <label>Check Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>