force-app/main/default/objects/Payment__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <inlineHelpText>Specifies the Credit Card mode selected while making the Payment.</inlineHelpText>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>USAA</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>