force-app/main/default/objects/Payment__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>Related_to_Invoice__r.Name</formula>
    <inlineHelpText>Specifies the Invoice Number to which the Payment being made is related.</inlineHelpText>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>