force-app/main/default/objects/Payment__c/fields/MCSTransactionID__c.field-meta.xml
<CustomField>
    <fullName>MCSTransactionID__c</fullName>
    <label>MCSTransactionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>