force-app/main/default/objects/Payment__c/fields/Payment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Created Date</label>
    <type>Date</type>
</CustomField>