force-app/main/default/objects/Payment__c/fields/ProcessorTransactionID__c.field-meta.xml
<CustomField>
    <fullName>ProcessorTransactionID__c</fullName>
    <label>ProcessorTransactionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>