force-app/main/default/objects/Payment__c/fields/QB_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice_ID__c</fullName>
    <formula>Related_to_Invoice__r.QBInvoiceID__c</formula>
    <label>QB Invoice ID</label>
    <type>Text</type>
</CustomField>