force-app/main/default/objects/Payment__c/fields/QuickBook_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>QuickBook_Payment_ID__c</fullName>
    <label>QuickBook Payment ID`</label>
    <length>5</length>
    <type>Text</type>
</CustomField>