force-app/main/default/objects/Payment__c/fields/Received_Cash__c.field-meta.xml
<CustomField>
    <fullName>Received_Cash__c</fullName>
    <label>Received Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>