force-app/main/default/objects/Payment__c/fields/Related_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Invoice__c</fullName>
    <inlineHelpText>Specifies the Invoice to which the Payment is being made.</inlineHelpText>
    <label>Related to Invoice(Deprecated)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Invoice__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Standard Invoice</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Payments(Deprecated)</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>