force-app/main/default/objects/Payment__c/fields/ResultDetail__c.field-meta.xml
<CustomField>
    <fullName>ResultDetail__c</fullName>
    <label>ResultDetail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>