force-app/main/default/objects/Payment__c/validationRules/Specify_Check_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Check_Number_Rule</fullName>
    <active>true</active>
    <description>Check number must be specified if the payment is made through check.</description>
    <errorConditionFormula>ISPICKVAL( Payment_Type__c , &quot;Check&quot;) &amp;&amp;  ISBLANK( Check_Number__c )</errorConditionFormula>
    <errorDisplayField>Check_Number__c</errorDisplayField>
    <errorMessage>Check number must be specified if the payment is made through check.</errorMessage>
</ValidationRule>