force-app/main/default/objects/Payment__c/validationRules/Valid_Amount_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Amount_Validation_Rule</fullName>
    <active>false</active>
    <description>Amount of the Payment must not exceed total Balance on Invoice.</description>
    <errorConditionFormula>IF( Amount__c &gt;  Related_to_Invoice__r.Balance__c , true, false)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount of the Payment must not exceed total Balance on Invoice.</errorMessage>
</ValidationRule>