force-app/main/default/objects/Payment__c/validationRules/Valid_Check_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Check_Number_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(Payment_Type__c , &quot;Check&quot;) ,
OR
(
 !ISNUMBER( Check_Number__c ) ,
LEN( Check_Number__c ) &lt;9
)
)</errorConditionFormula>
    <errorDisplayField>Check_Number__c</errorDisplayField>
    <errorMessage>Please Provide a valid Routing Transit Number for the check (A valid 9 digit number).</errorMessage>
</ValidationRule>